# hc-risk

./: .env.example  .gitignore  .vercelignore  README.md  analysis.html  app.js  cluely.html  docs-risk-memo.html  index.html  infra-architecture.html  pyproject.toml  sicp.css  sicp.html  sicp.js  sql-portfolio-kri.html  sql-vintage-monitor.html  styles.css  vercel.json
.azure/: plan.md
.github/workflows/: trakindo_showcase.yml
api/: borrower.py  index.py
borrowers/: 135352.html  150019.html  181179.html  182619.html  244282.html  249008.html  267880.html  277401.html  374621.html  404380.html
data/: summary.json
docs/: risk-memo.md
infra/: architecture.md
notebooks/: analysis_runner.ipynb  data_analysis.ipynb  finance_in_ai_credit_risk_analysis.ipynb  leaderboard_runner.ipynb  lending_club_style_risk_analysis.ipynb
paper/: credit-risk.epub  credit-risk.md  data_engineering_complexities.tex  home_credit_case_justification.aux  home_credit_case_justification.out  home_credit_case_justification.tex  kaggle_winner_theory.tex
scripts/: build_web_bundle.py  markdown_to_epub.py
sql/: portfolio_kri.sql  vintage_monitor.sql
src/hc_risk/: __init__.py  analysis.py  cli.py  config.py  features.py  io.py  leaderboard.py  metrics.py  reporting.py  sampling.py  scorecard.py
tests/: test_features.py  test_scorecard.py
